# pthread

pthread_example/pthread_char/: pthread_char  pthread_char.c
pthread_example/pthread_create/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  pthread_create  pthread_create.c
pthread_example/pthread_create/autom4te.cache/: output.0  traces.0  traces.1
pthread_example/pthread_exit/: pthread_exit  pthread_exit.c
pthread_example/pthread_id/: pthread_id  pthread_id.c
pthread_example/pthread_int/: pthread_int  pthread_int.c
pthread_example/pthread_ret_struct/: pthread_ret_struct  pthread_ret_struct.c
pthread_example/pthread_share/: pthread_share  pthread_share.c
pthread_example/pthread_struct/: pthread_struct  pthread_struct.c
